<resources>
    <string name="app_name">Iteso Store</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_logout">Log out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hola_android">Hello Android!</string>

    <string name="tech_title_mac">Macbook</string>
    <string name="tech_store_mac">Zapopan</string>
    <string name="PHONE_MAC">31220354</string>
    <string name="ADDRESS_MAC">California</string>

    <string name="tech_title_alien">Alien 2000</string>
    <string name="tech_store_alien">CDMX</string>
    <string name="PHONE_ALIEN">3331072635</string>
    <string name="ADDRESS_ALIEN">Zapopan</string>

    <string name="tech_title_lanix">Dell Yoga</string>
    <string name="tech_Store_lanix">Guadalajara</string>
    <string name="PHONE_LANIX">3312345678</string>
    <string name="ADDRESS_LANIX">Tokyo</string>

    <string name="home_title_depot">The Home Depot</string>
    <string name="home_store_depot">Zapopan</string>
    <string name="home_phone_depot">33122094</string>
    <string name="home_address_depot">Mexico</string>

    <string name="home_title_vivero">Vivero GDL</string>
    <string name="home_store_vivero">Guadalajara</string>
    <string name="home_phone_vivero">9876543321</string>
    <string name="home_address_vivero">Periferico 1000</string>

    <string name="electronics_title">Kevin Unlocks </string>
    <string name="electronics_store">Zapopan</string>
    <string name="electronics_phone">332234565</string>
    <string name="electronics_address">Lopez Mateos #584</string>

    <string name="phone_number">Tel:</string>
    <string name="welcome_to_preferences">WELCOME TO ITESO STORE</string>
    <string name="tab_0">Technology</string>
    <string name="tab_1">Home</string>
    <string name="tab_2">Electronics</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="user">user</string>
    <string name="edit">Edit:</string>
    <string name="introduce_title">Introduce title</string>
    <string name="introduce_store">Introduce store</string>
    <string name="introduce_location">Introduce location</string>
    <string name="introduce_phone">Introduce phone</string>
    <string name="cancelar">CANCELAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="see_more">SEE MORE</string>
    <string name="share">SHARE</string>
    <string name="title_activity_item">ActivityItem</string>
    <string name="image">Image</string>
    <string name="store">Store</string>
    <string name="title">Title</string>
    <string name="category">Category</string>

    <string-array name="activity_item_images_spinner">
        <item>"Mac"</item>
        <item>"Alienware"</item>
        <item>"Lanix"</item>
        <item>"Lampara"</item>
        <item>"Planta"</item>
        <item>"Telefono"</item>
    </string-array>

</resources>
