<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:id="@+id/item_product_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardview_default_elevation"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_margin="@dimen/appbar_padding_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

        <TextView
            android:id="@+id/item_product_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            android:text="@string/edit"/>

        <ImageView
            android:id="@+id/item_product_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_edit"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            />
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            <EditText
                android:layout_weight="1"
                android:id="@+id/item_product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="5dp"
                android:textSize="20sp"
                android:hint="@string/introduce_title"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            <EditText
                android:id="@+id/item_product_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="5dp"
                android:textSize="20sp"
                android:hint="@string/introduce_store"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            <EditText
                android:id="@+id/item_product_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="5dp"
                android:textSize="20sp"
                android:hint="@string/introduce_location"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            <EditText
                android:id="@+id/item_product_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="5dp"
                android:textSize="20sp"
                android:inputType="phone"
                android:hint="@string/introduce_phone"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <Button
        android:id="@+id/item_product_cancel"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:text="@string/cancelar"
        android:layout_marginStart="@dimen/two"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/item_product_save"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/two"
        android:layout_marginEnd="@dimen/two"
        android:background="@color/colorPrimaryDark"
        android:text="@string/guardar"
        android:textColor="@android:color/white"/>
    </LinearLayout>


</RelativeLayout>
